# profit365-cli

./: CMakeLists.txt  README.md
source/: main.cpp
source/api/: profitapi.h
